--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -102,7 +102,7 @@
 
         .feedback-form {
           margin: 20px 0 0 24px;
-          padding: 10px 40px; 
+          padding: 10px 40px;
           border: 1px solid #ff9d2f;
           width: 80%;
 
@@ -110,6 +110,10 @@
             padding: 10px;
             font-size: 22px;
             text-align: center;
+          }
+
+          .mat-form-field {
+            padding-bottom: 16px;
           }
 
           .form {
@@ -143,6 +147,7 @@
             padding: 24px 0 0 0;
             font-size: 22px;
           }
+
           .feedback-form {
             width: 100%;
             margin-left: 0;
@@ -153,12 +158,13 @@
 
           .feedback-form {
             padding: 10px;
+
             .form {
               &__button {
-                    font-size: 16px;
+                font-size: 16px;
               }
             }
-          } 
+          }
         }
       }
 
@@ -173,7 +179,7 @@
       app-our-services {
         display: block;
       }
-  }
+    }
 
     @media @max-tablet {
       padding: 0 24px;
