--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -72,6 +72,7 @@
         .address {
           display: flex;
           align-items: center;
+          padding-bottom: 16px;
 
           &__icon {
             background: url(/assets/images/icons/location.svg) 0 0 no-repeat;
@@ -91,12 +92,12 @@
         }
 
         .individual-predpr {
-          padding: 24px 0 0 24px;
+          padding: 0 0 0 24px;
           font-size: 22px;
         }
 
         .unp {
-          padding: 24px 0 0 24px;
+          padding: 0 0 0 24px;
           font-size: 22px;
         }
 
