--- a/src/styles.less
+++ b/src/styles.less
@@ -29,6 +29,16 @@ h1, h2, h3, h4, h5 {
   font-style: italic;
 }
 
+@media @max-tablet {
+  h1 {
+    font-size: 29px;
+  }
+
+  h2 {
+    font-size: 20px;
+  }
+}
+
 .divider-block {
   position: relative;
   height: 150px;
