--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -2,8 +2,8 @@
   <div class="head-title">
     <div class="container">
       <div class="head-title__title">
-        <h1 class="title">Профессиональные услуги трубочиста</h1>
-        <h4 class="title">У нас Вы можете заказать услуги по чистке, установке и демонтажу дымоходов.</h4>
+        <h1 class="title">Профессиональное обслуживание печей и каминов</h1>
+        <h4 class="title">У нас Вы можете заказать услуги по чистке, установке и демонтажу любого отопительного оборудования.</h4>
         <button class="title-button" mat-button routerLink="/about-us">Связаться с нами</button>
       </div>
     </div>
