--- a/src/app/components/our-services/our-services.component.html
+++ b/src/app/components/our-services/our-services.component.html
@@ -14,7 +14,7 @@
   </div>
   <div class="services__item">
     <div class="services__img check"></div>
-    <div class="services__text">Обслуживание, проверка и контроль функционирования системы дымохода газовых котлов.
+    <div class="services__text">Обслуживание, проверка и контроль функционирования системы дымохода, твердотопливных и газовых котлов.
     </div>
   </div>
 </div>
