--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -11,6 +11,36 @@
   <div class="divider divider__odd">
     <div class=" divider-block divider"></div>
   </div>
+  <div class="our-works">
+    <div class="container">
+      <div class="">
+        <h2 class="our-work__title">
+          Мы выполняем следующие работы
+        </h2>
+        <div class="our-works__container row">
+          <app-our-services></app-our-services>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="divider divider__even">
+    <div class="divider-block divider-block__even"></div>
+  </div>
+  <div class="our-partners">
+    <div class="container-fluid">
+      <div class="row feedback d-flex justify-content-center">
+        <h2 class="feedback__title">С нами сотрудничают: </h2>
+        <div class="feedback__container">
+          <div class="item" *ngFor="let work of cafes">
+            <img [src]="work.img" alt="Examples of our work" class="item__images">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="divider divider__odd">
+    <div class=" divider-block divider-block__odd"></div>
+  </div>
   <div class="our-advantages">
     <div class="container-fluid">
       <div class="advantages">
@@ -32,44 +62,6 @@
             <div class="advantage__icon money"></div>
             <div class="advantage__text text-center align-middle"><h4>Доступная цена</h4></div>
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="divider divider__even">
-    <div class="divider-block divider-block__even"></div>
-  </div>
-  <div class="our-partners">
-    <div class="container">
-      <div class="row feedback d-flex justify-content-center">
-        <h2 class="feedback__title">С нами сотрудничают: </h2>
-        <div class="feedback__container">
-          <ngb-carousel *ngIf="cafes" [showNavigationIndicators]="false" style="width: 100%;">
-            <ng-template ngbSlide *ngFor="let cafe of cafes">
-              <h2 style="text-align: center">{{cafe.title}}</h2>
-              <div class="picsum-img-wrapper" style="width: 100%;">
-                <img [src]="cafe.img" alt="Random first slide" style="width: 100%;">
-              </div>
-              <div class="carousel-caption">
-              </div>
-              <div>{{cafe.text}}</div>
-            </ng-template>
-          </ngb-carousel>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="divider divider__odd">
-    <div class=" divider-block divider-block__odd"></div>
-  </div>
-  <div class="our-works">
-    <div class="container">
-      <div class="">
-        <h2 class="our-work__title">
-          Мы выполняем следующие работы
-        </h2>
-        <div class="our-works__container row">
-          <app-our-services></app-our-services>
         </div>
       </div>
     </div>
