--- a/src/assets/styles/catalog.component.less
+++ b/src/assets/styles/catalog.component.less
@@ -10,9 +10,13 @@
   }
 
   .item {
+    display: flex;
+    justify-content: center;
 
     &__images {
       width: 100%;
+      max-width: 300px;
+      margin: 0 auto;
       height: 300px;
       padding: 24px 0;
     }
