--- a/src/assets/styles/main-page.component.less
+++ b/src/assets/styles/main-page.component.less
@@ -93,13 +93,33 @@ ngb-carousel.carousel.slide:focus {
   }
 
   .our-partners {
-    padding: 48px 24px;
+    padding: 48px 24px 0;
     background: @even-color;
     position: relative;
+
+    .feedback__container {
+      display: flex;
+      justify-content: space-around;
+      width: 100%;
+      padding-top: 24px;
+      max-width: 1280px;
+
+      .item {
+        max-width: 250px;
+        max-height: 150px;
+        margin: 0 auto;
+        padding: 12px 0 0;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
+      }
+    }
   }
 
   .our-works {
-    padding: 48px 0;
+    padding: 24px 0 0;
     position: relative;
     background: @odd-color;
   }
@@ -145,6 +165,17 @@ ngb-carousel.carousel.slide:focus {
   @media @max-phone {
     .our-works {
       padding: 24px 16px;
+    }
+
+    .our-partners {
+
+      .feedback__container {
+        display: block;
+
+        .item {
+          padding: 12px 0;
+        }
+      }
     }
   }
 }
