add photo dialog

--- a/src/styles.less
+++ b/src/styles.less
@@ -62,6 +62,7 @@ h1, h2, h3, h4, h5 {
 
 .divider {
   background-color: white;
+
   &__odd {
     background: @odd-color;
   }
@@ -69,4 +70,9 @@ h1, h2, h3, h4, h5 {
   &__even {
     background: @even-color;
   }
+}
+
+.cdk-overlay-pane {
+  max-width: none !important;
+  margin: 24px;
 }
