--- a/src/app/components/our-works/our-works.component.html
+++ b/src/app/components/our-works/our-works.component.html
@@ -6,7 +6,7 @@
         <div class="work-other-examples__items">
           <div class="row d-flex justify-content-center">
             <div class="item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let work of ourWork">
-              <img [src]="work" alt="Examples of our work" class="item__images">
+              <img [src]="work" (click)="openDialog(work)" alt="Examples of our work" class="item__images">
             </div>
           </div>
         </div>
