--- a/src/assets/styles/main-page.component.less
+++ b/src/assets/styles/main-page.component.less
@@ -54,37 +54,28 @@ ngb-carousel.carousel.slide:focus {
           flex-direction: column;
           justify-content: center;
 
-          .work-tool {
-            background: url(/assets/images/icons/work-tool.svg) 0 0 no-repeat;
+          .work-tool, .work-experience, .quality-adv, .money {
             height: 60px;
             width: 60px;
             background-size: cover;
             margin: 0 auto;
 
+          }
+
+          .work-tool{
+            background: url(/assets/images/icons/work-tool.svg) 0 0 no-repeat;
           }
 
           .work-experience {
             background: url(/assets/images/icons/work-experience.svg) 0 0 no-repeat;
-            height: 60px;
-            width: 60px;
-            background-size: cover;
-            margin: 0 auto;
           }
 
           .quality-adv {
             background: url(/assets/images/icons/quality-adv.svg) 0 0 no-repeat;
-            height: 60px;
-            width: 60px;
-            background-size: cover;
-            margin: 0 auto;
           }
 
           .money {
             background: url(/assets/images/icons/money.svg) 0 0 no-repeat;
-            height: 60px;
-            width: 60px;
-            background-size: cover;
-            margin: 0 auto;
           }
         }
       }
