change styles, add empty uslugi page

--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -9,6 +9,7 @@
           <div class="phone__icon" (click)="call()"></div>
           <div class="phone__number">
             <a class="phone-link" href="tel: +375296030773">+375 (29) 603-07-73</a>
+            <a class="phone-link" href="tel: +375295163707">+375 (29) 516-37-07</a>
           </div>
         </div>
 
