--- a/src/assets/styles/about-us.component.less
+++ b/src/assets/styles/about-us.component.less
@@ -19,10 +19,10 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: left;
-        padding-left: 48px;
+        padding: 0 24px 0 48px;
 
         .phone {
-          display: flex;
+          display: none;
           align-items: center;
 
           &__icon {
@@ -40,17 +40,24 @@
           &__number {
             padding-left: 12px;
             font-size: 22px;
+            display: flex;
+            flex-direction: column;
           }
 
           .phone-link {
             color: inherit;
+          }
+
+          @media @max-phone {
+            padding: 0 0 12px 0;
+            display: flex;
           }
         }
 
         .email {
           display: flex;
           align-items: center;
-          padding: 24px 0;
+          padding: 0 0 12px;
 
           &__icon {
             background: url(/assets/images/icons/mail.svg) 0 0 no-repeat;
@@ -72,7 +79,7 @@
         .address {
           display: flex;
           align-items: center;
-          padding-bottom: 16px;
+          padding: 0 0 12px;
 
           &__icon {
             background: url(/assets/images/icons/location.svg) 0 0 no-repeat;
@@ -92,12 +99,12 @@
         }
 
         .individual-predpr {
-          padding: 0 0 0 24px;
+          padding: 0 0 12px 24px;
           font-size: 22px;
         }
 
         .unp {
-          padding: 0 0 0 24px;
+          padding: 0 0 12px 24px;
           font-size: 22px;
         }
 
@@ -145,7 +152,7 @@
           }
 
           .individual-predpr, .unp {
-            padding: 24px 0 0 0;
+            padding: 0 0 12px 0;
             font-size: 22px;
           }
 
