--- a/src/assets/styles/catalog.component.less
+++ b/src/assets/styles/catalog.component.less
@@ -19,6 +19,10 @@
       margin: 0 auto;
       height: 300px;
       padding: 24px 0;
+
+      &:hover {
+        cursor: pointer;
+      }
     }
   }
 
