add title and accordion for uslugi page

--- a/src/app/components/uslugi/uslugi.component.html
+++ b/src/app/components/uslugi/uslugi.component.html
@@ -1,1 +1,83 @@
-<p>uslugi works!</p>
+<div class="uslugi">
+  <div class="uslugi__container">
+    <h1 class="uslugi__title">
+      Компания оказывает профессиональные услуги по монтажу, кладке, ремонту и очистке
+      дымоходов, каминов, печей, котлов.
+      В компании работают квалифицированные печники и чистильщики дымовых и вентиляционных каналов.
+    </h1>
+
+    <div class="uslugi__often-questions">
+      <mat-accordion>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Что такое камин?
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+
+          Слово камин происходит от латинского слова kaminos, что в переводе означает "очаг". Как источник тепла он
+          начал
+          применяться в быту человека гораздо раньше печи. За много веков существования камин совершенствовался и
+          претерпевал конструктивные изменения, но все же сохранил свои первоначальные черты и по сей день.
+          В отличие от печи, камин греет пока топится, и начинает отдавать тепло сразу после того, как разгорится огонь.
+          Его настоящая ценность в том, что помещение начинает нагреваться сразу, как только разгорится огонь. Именно
+          поэтому, в современных условиях, камин наиболее приемлем для помещений с непостоянным поддержанием тепла и, в
+          большинстве случаев, является декоративным атрибутом домов с центральным отоплением.
+          Камин создает свой особый, неповторимый уют, дает возможность насладиться созерцанием живого огня, приятным
+          потрескиванием дров и их ароматом.
+          В Россию камин пришел из Европы, но Российские печники быстро освоили каминное дело и даже внесли в него
+          некоторые новшества, как архитектурные, так принципиально новые, позволившие совместить его с печью, отсюда и
+          произошло название "камино-печь".
+          На сайте трубочиста, Вы сможете ознакомиться с выполненными работами профессиональных печников и оформить
+          заказы
+          на строительство каминов.
+          В каталоге работ Трубочиста представлены работы печников по кладке каминов различного типа. Если Вам
+          понравилась
+          конкретная выполненная работа, мы сможем немного видоизменить её, с учетом Ваших пожеланий, или принять заказ
+          на
+          разработку индивидуального проекта камина.
+
+        </mat-expansion-panel>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Как часто должна производиться чистка?
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <p>Согласно действующему законодательству, дымоходы подлежат очистке:
+            • один раз в три месяца – для отопительных печей;
+            • один раз в два месяца – для очагов непрерывного действия;
+            • один раз в месяц – для кухонных плит и других печей непрерывной (долговременной) топки.
+
+            Дымоходы от газовых котлов и другого котельного оборудования, подлежат обследованию три раза в год:
+
+            • перед началом отопительного сезона;
+            • в середине отопительного сезона;
+            • после окончания отопительного сезона.
+            Очистка дымоходов от газовых котлов, должна проводиться не реже одного раза в год.
+          </p>
+        </mat-expansion-panel>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Как заключить договор обслуживания вентиляции и дымохода?
+            </mat-panel-title>
+          </mat-expansion-panel-header>
+          <p>
+            Первым шагом, который необходимо выполнить перед заключением договора, является первичный осмотр объекта.
+            Для
+            выполнения данных работ, на объект выезжает бригада квалифицированных специалистов, которая рассчитает
+            площадь
+            очищаемой поверхности, степень загрязнения, наличие доступа ко всем участкам дымовых и вентиляционных
+            каналов.
+            Стоимость первичных работ может быть несколько выше всех последующих, так как на начальном этапе степень
+            загрязнения значительно выше, а доступ к каналам не обеспечен и требуется установка вентиляционных люков.
+            Если Вы всерьез задумались о заключении договора на постоянное обслуживание, позвоните к нам в компанию, и
+            мы
+            детально проработаем все вопросы, связанные с этим.
+          </p>
+        </mat-expansion-panel>
+      </mat-accordion>
+    </div>
+  </div>
+</div>
