add content uslugi page

--- a/src/app/components/uslugi/uslugi.component.html
+++ b/src/app/components/uslugi/uslugi.component.html
@@ -1,12 +1,26 @@
 <div class="uslugi">
   <div class="uslugi__container">
-    <h1 class="uslugi__title">
-      Компания оказывает профессиональные услуги по монтажу, кладке, ремонту и очистке
+    <h2 class="uslugi__title">
+      Мы оказываем профессиональные услуги по монтажу, кладке, ремонту и очистке
       дымоходов, каминов, печей, котлов.
-      В компании работают квалифицированные печники и чистильщики дымовых и вентиляционных каналов.
-    </h1>
+      В нашей компании работают квалифицированные печники и чистильщики дымовых и вентиляционных каналов.
+    </h2>
+
+    <div class="uslugi__list row d-flex justify-content-center">
+      <div class="uslugi__item item col-12 col-sm-6 col-lg-4 col-xl-4" *ngFor="let usluga of uslugi">
+        <div class="item__image">
+          <!--          <img [src]="usluga.src" alt="{{usluga.alt}}">   сделать при наведении слово "Подробнее"-->
+        </div>
+        <div class="item__title">
+          <h3>{{usluga.title}}</h3>
+        </div>
+      </div>
+    </div>
 
     <div class="uslugi__often-questions">
+      <div class="often-questions__title">
+        <h3>Часто задаваемые вопросы:</h3>
+      </div>
       <mat-accordion>
         <mat-expansion-panel>
           <mat-expansion-panel-header>
@@ -14,7 +28,6 @@
               Что такое камин?
             </mat-panel-title>
           </mat-expansion-panel-header>
-
           Слово камин происходит от латинского слова kaminos, что в переводе означает "очаг". Как источник тепла он
           начал
           применяться в быту человека гораздо раньше печи. За много веков существования камин совершенствовался и
@@ -45,15 +58,15 @@
             </mat-panel-title>
           </mat-expansion-panel-header>
           <p>Согласно действующему законодательству, дымоходы подлежат очистке:
-            • один раз в три месяца – для отопительных печей;
-            • один раз в два месяца – для очагов непрерывного действия;
-            • один раз в месяц – для кухонных плит и других печей непрерывной (долговременной) топки.
+            один раз в три месяца – для отопительных печей;
+            один раз в два месяца – для очагов непрерывного действия;
+            один раз в месяц – для кухонных плит и других печей непрерывной (долговременной) топки.
 
             Дымоходы от газовых котлов и другого котельного оборудования, подлежат обследованию три раза в год:
 
-            • перед началом отопительного сезона;
-            • в середине отопительного сезона;
-            • после окончания отопительного сезона.
+            перед началом отопительного сезона;
+            в середине отопительного сезона;
+            после окончания отопительного сезона.
             Очистка дымоходов от газовых котлов, должна проводиться не реже одного раза в год.
           </p>
         </mat-expansion-panel>
