add content uslugi page

--- a/src/assets/styles/uslugi.component.less
+++ b/src/assets/styles/uslugi.component.less
@@ -1,3 +1,5 @@
+@import "../shared-styles/shared-styles.less";
+
 .uslugi {
   &__container {
     padding-top: 24px;
@@ -16,7 +18,12 @@
       &__image {
         background-color: #fcb446;
         width: 100%;
-        height: 400px;
+        height: 300px;
+
+        img {
+          width: 100%;
+          height: 100%;
+        }
       }
 
       &__title {
